versions/v2.9/modules/en/pages/cluster-admin/kubernetes-resources/workloads-and-pods/upgrade-workloads.adoc
= Upgrading Workloads
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/upgrade-workloads 
:product-path: cluster-admin/kubernetes-resources/workloads-and-pods/upgrade-workloads

When a new version of an application image is released on Docker Hub, you can upgrade any workloads running a previous version of the application to the new one.

. In the upper left corner, click *☰ > Cluster Management*.
. Go to the cluster where you want to upgrade a workload and click *Explore*.
. In the left navigation bar, click *Workload*.
. Find the workload that you want to upgrade and select *⋮ > Edit Config*.
. Update the *Container Image* and any options that you want to change.
. Review and edit the workload's *Scaling and Upgrade Policy*.
+
These options control how the upgrade rolls out to containers that are currently running. For example, for scalable deployments, you can choose whether you want to stop old pods before deploying new ones, or vice versa, as well as the upgrade batch size.

. Click *Save*.

*Result:* The workload begins upgrading its containers, per your specifications. Note that scaling up the deployment or updating the upgrade/scaling policy won't result in the pods recreation.
